; ModuleID = '/home/carl/AnghaBench/redis/src/extr_geohash.c_geohashDecodeToLongLatType.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_geohash.c_geohashDecodeToLongLatType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @geohashDecodeToLongLatType(i32 %0, double* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca double*, align 8
  %6 = alloca %struct.TYPE_6__, align 4
  store i32 %0, i32* %4, align 4
  store double* %1, double** %5, align 8
  %7 = bitcast %struct.TYPE_6__* %6 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %7, i8 0, i64 4, i1 false)
  %8 = load double*, double** %5, align 8
  %9 = icmp ne double* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @geohashDecodeType(i32 %11, %struct.TYPE_6__* %6)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %10, %2
  store i32 0, i32* %3, align 4
  br label %18

15:                                               ; preds = %10
  %16 = load double*, double** %5, align 8
  %17 = call i32 @geohashDecodeAreaToLongLat(%struct.TYPE_6__* %6, double* %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %15, %14
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @geohashDecodeType(i32, %struct.TYPE_6__*) #2

declare dso_local i32 @geohashDecodeAreaToLongLat(%struct.TYPE_6__*, double*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
